# centralized-baselines

./: .gitignore  indices.pkl  pyproject.toml
baselines/: CNN_CV.py  CNN_best.py  dreamt_train_pipeline.py  mitbih_train_pipeline.py  param_search.py  param_search_CV.py  tinyCNN_CV.py  tinyCNN_best.py  utils.py
baselines/data/: datasets.py  dreamt.py  mitbih.py  utils.py
baselines/models/: __init__.py  architectures.py  evaluate.py  registry.py  train.py
notebooks/exploratory/: DeepConvLSTM.ipynb  MIT-BIH.ipynb  MULTICNN+STFT.ipynb  MULTICNN.ipynb  MULTITCN+STFT.ipynb  MULTITCN.ipynb  Tiny CNN (MIT-BIH).ipynb  dreamt_mia_centralized.ipynb  mcc_temp.ipynb
sleep_stage_prediction/: dreamt_train_pipeline.py  mitbih_train_pipeline.py  train_pipeline.py
sleep_stage_prediction/data/: __init__.py  datasets.py  dreamt.py  mitbih.py  utils.py
sleep_stage_prediction/models/: __init__.py  architectures.py  evaluate.py  train.py
