[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "baselines"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Yacine Belal" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "fire>=0.7.1",
    "jupyterlab>=4.5.5",
    "matplotlib>=3.10.8",
    "mlflow==3.11.1",
    "numpy>=2.4.2",
    "pandas<3",
    "pip",
    "python-dotenv",
    "ruff",
    "protobuf>=3.20,<4.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch==2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "setuptools<81",
    "wfdb>=4.3.1",
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["baselines"]
include = ["pyproject.toml", "baselines/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["baselines"]
force-sort-within-sections = true

